# fathom

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  config.toml.example  deny.toml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
crates/fathom-types/: Cargo.toml
crates/fathom-types/src/: lib.rs
docs/: risk-register.md  schema-versioning.md
docs/adr/: 001-broadcast-channel-over-mpsc.md  002-drop-on-backpressure.md  003-btreemap-for-order-book.md  004-order-book-invariants-and-gap-semantics.md  005-acceptable-data-loss-window.md  006-completeness-vs-uptime.md
docs/engineering/: 2026-03-31-memory-pressure-nats-backpressure.md  README.md
fathom-sync/: Cargo.toml  Dockerfile  config.toml.example
fathom-sync/src/: cleanup.rs  config.rs  error.rs  lib.rs  main.rs  scanner.rs  state.rs  uploader.rs
fathom-sync/tests/: cleanup_test.rs  config_test.rs  scanner_test.rs  state_test.rs
scripts/: docker-blue-green.sh  docker-smoke.sh
src/: accumulator.rs  config.rs  connection.rs  connection_dydx.rs  connection_hl.rs  error.rs  lib.rs  main.rs  metrics.rs  monitor.rs  nats_sink.rs  schema.rs
src/connection/: binance.rs  dydx.rs  hyperliquid.rs  mod.rs  runtime.rs
src/exchange/: binance_perp.rs  binance_spot.rs  dydx.rs  hyperliquid.rs  mod.rs
src/orderbook/: manager.rs  mod.rs
src/writer/: mod.rs  raw.rs  snap_1s.rs
tests/: accumulator_test.rs  config_test.rs  connection_test.rs  e2e_test.rs  exchange_test.rs  integration_test.rs  metrics_test.rs  monitor_test.rs  orderbook_test.rs  schema_compat_test.rs  smoke_dydx_test.rs  smoke_hl_test.rs  smoke_test.rs  writer_test.rs
tests/helpers/: mod.rs  parquet.rs
