[package]
name = "fathom"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio              = { version = "1.43", features = ["full"] }
tokio-tungstenite  = { version = "0.26", features = ["native-tls"] }
futures-util       = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
arrow-array        = "54"
arrow-schema       = "54"
parquet            = { version = "54", features = ["snap"] }
ordered-float      = "4.3"
config             = "0.14"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror          = "2.0"
anyhow             = "1.0"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono             = { version = "0.4", features = ["serde"] }
rand               = "0.8"

[dev-dependencies]
tokio              = { version = "1.43", features = ["test-util"] }
tempfile           = "3"
parquet            = { version = "54", features = ["snap", "arrow"] }
arrow              = { version = "54" }
axum               = { version = "0.8", features = ["ws"] }
