[workspace]
resolver = "3"
members = [".", "crates/fathom-types"]

[package]
name = "fathom"
version = "0.3.0"
edition = "2024"

[dependencies]
fathom-types = { path = "crates/fathom-types" }
tokio              = { version = "1.43", features = ["full"] }
tokio-tungstenite  = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util       = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
arrow-array        = "54"
arrow-schema       = "54"
parquet            = { version = "54", features = ["snap"] }
ordered-float      = "4.3"
config             = "0.14"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror          = "2.0"
anyhow             = "1.0"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono             = { version = "0.4", features = ["serde"] }
rand               = "0.8"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
implicit_clone = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
tokio              = { version = "1.43", features = ["test-util"] }
tempfile           = "3"
parquet            = { version = "54", features = ["snap", "arrow"] }
arrow              = { version = "54" }
axum               = { version = "0.8", features = ["ws"] }
