[package]
name = "fathom-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio              = { version = "1.43", features = ["full"] }
object_store       = { version = "0.11", features = ["aws"] }
serde              = { version = "1.0", features = ["derive"] }
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono             = "0.4"
thiserror          = "2.0"
walkdir            = "2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
walkdir  = "2"
